Fixed extra padding on the right in mobile version

--- a/style.css
+++ b/style.css
@@ -27,7 +27,10 @@ body {
     margin: 0px;
 }
 
-
+header{
+    margin: 0px;
+    padding: 0px;
+}
 
 
 /* CSS Grid for the header of the desktop setup. 3 portions: Logo, Picture and Content of the header */
@@ -321,6 +324,7 @@ footer{
         align-content: center;
         justify-content: center;
         text-align: center;
+        padding-left: 0px;
     }
 
     .event{
